<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CountryDetails">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/detail_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/stupid_white">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.33" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline_vertical_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.66" />

            <androidx.cardview.widget.CardView
                android:id="@+id/flag_card"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:layout_margin="24dp"
                app:cardCornerRadius="17dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/flag_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/flag_image_of_country"
                    android:scaleType="centerCrop" />

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/details_Name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/work_sans"
                android:gravity="center"
                android:text="@string/country_name"
                android:textColor="@android:color/black"
                android:textSize="32sp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/flag_card" />

            <ImageView
                android:id="@+id/icon_capital_details"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/capital"
                android:backgroundTint="@color/golden"
                android:contentDescription="@string/icon"
                app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_2"
                app:layout_constraintStart_toStartOf="@+id/guideline_vertical_1"
                app:layout_constraintTop_toBottomOf="@+id/details_Name" />

            <TextView
                android:id="@+id/details_capital"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/asap"
                android:gravity="center"
                android:text="@string/capital"
                android:textColor="@android:color/black"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_2"
                app:layout_constraintStart_toStartOf="@+id/guideline_vertical_1"
                app:layout_constraintTop_toBottomOf="@+id/icon_capital_details" />

            <ImageView
                android:id="@+id/icon_area_details"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/area"
                android:contentDescription="@string/icon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline_vertical_2"
                app:layout_constraintTop_toTopOf="@+id/icon_capital_details" />

            <TextView
                android:id="@+id/details_area"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/asap"
                android:gravity="center"
                android:text="@string/area"
                android:textColor="@android:color/black"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/guideline_vertical_2"
                app:layout_constraintTop_toBottomOf="@+id/icon_area_details" />

            <ImageView
                android:id="@+id/icon_population_details"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@drawable/population"
                android:contentDescription="@string/icon"
                app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/icon_capital_details" />

            <TextView
                android:id="@+id/details_population"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/asap"
                android:gravity="center"
                android:text="@string/population"
                android:textColor="@android:color/black"
                android:textSize="19sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toStartOf="@+id/guideline_vertical_1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/icon_population_details" />

            <androidx.cardview.widget.CardView
                android:id="@+id/go_holiday_button"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginStart="40dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="40dp"
                android:layout_marginBottom="32dp"
                app:cardCornerRadius="11dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/details_capital">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white_q1">

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:text="@string/holidays"
                        android:textColor="@color/colorAccent"
                        android:textSize="19sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:layout_width="48dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="16dp"
                        android:background="@drawable/arrow_right_alt"
                        android:backgroundTint="@color/colorAccent"
                        android:contentDescription="@string/details"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>


            <TextView
                android:id="@+id/borders_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/work_sans"
                android:gravity="center"
                android:text="@string/borders"
                android:textColor="@android:color/black"
                android:textSize="27sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/go_holiday_button" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/borders_viewpager"
                android:layout_width="match_parent"
                android:layout_height="240dp"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/borders_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</FrameLayout>