<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.country_holiday_weekends_details">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <TextView
            android:id="@+id/country_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:fontFamily="@font/asap"
            android:gravity="center"
            android:maxEms="7"
            android:maxLines="1"
            android:textColor="@color/text_color"
            android:textSize="32sp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@android:color/transparent"
            android:elevation="2dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/background_flag"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:alpha="0.5"
            android:contentDescription="@string/country_flag"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:animateLayoutChanges="true">

                <TextView
                    android:id="@+id/text_nonData"
                    android:layout_width="match_parent"
                    android:layout_height="320dp"
                    android:fontFamily="@font/asap"
                    android:gravity="center"
                    android:maxEms="12"
                    android:text="@string/error_message_holiday"
                    android:textColor="@color/text_color"
                    android:textSize="24sp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/holidays_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="320dp"
                    android:layout_margin="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/weekends_recyclerview"
                    android:layout_width="match_parent"
                    android:layout_height="270dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="352dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginBottom="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/text_nonData_weekends"
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:layout_marginTop="320dp"
                    android:layout_marginBottom="48dp"
                    android:fontFamily="@font/asap"
                    android:gravity="center"
                    android:maxEms="12"
                    android:text="@string/error_message_weekend"
                    android:textColor="@color/text_color"
                    android:textSize="24sp"
                    android:visibility="gone"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


            </androidx.constraintlayout.widget.ConstraintLayout>


        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>


</FrameLayout>