<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="model"
            type="com.log.worldholidays.model.CountryDB" />

        <variable
            name="AdapterBinder"
            type="com.log.worldholidays.adapter.AdapterBinder" />

        <variable
            name="Adapter"
            type="com.log.worldholidays.adapter.CountryListAdapter" />

    </data>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_countryList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="4dp"
        android:layout_marginBottom="8dp"
        android:animateLayoutChanges="true"
        android:onClick="@{AdapterBinder::onCountryClick}">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:background="@color/colorPrimary">

            <ImageView
                android:id="@+id/image_flag"
                android:layout_width="125dp"
                android:layout_height="75dp"
                android:layout_margin="4dp"
                android:contentDescription="@string/country_flag"
                android:download_url="@{model.flag}"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/country_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="8dp"
                android:ellipsize="end"
                android:fontFamily="@font/asap"
                android:gravity="start"
                android:maxLines="1"
                android:text="@{model.name}"
                android:textColor="@color/text_color"
                android:textSize="17sp"
                app:layout_constraintEnd_toStartOf="@+id/add_button"
                app:layout_constraintStart_toEndOf="@+id/image_flag"
                app:layout_constraintTop_toTopOf="@+id/image_flag" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/asap"
                android:gravity="start"
                android:maxLines="1"
                android:text="@{model.capital}"
                android:textColor="@color/text_color"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="@+id/country_name"
                app:layout_constraintStart_toStartOf="@+id/country_name"
                app:layout_constraintTop_toBottomOf="@+id/country_name" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/constraintLayout"
                app:layout_constraintStart_toStartOf="@+id/textView3">

                <ImageView
                    android:id="@+id/icon_population"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/population"
                    android:contentDescription="@string/icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/work_sans"
                    android:text="@{model.population}"
                    android:textColor="@color/text_color"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/icon_population"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/icon_population"
                    app:layout_constraintTop_toTopOf="@+id/icon_population" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/constraintLayout2">

                <ImageView
                    android:id="@+id/icon_area"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:background="@drawable/area"
                    android:contentDescription="@string/icon"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:fontFamily="@font/work_sans"
                    android:text="@{model.area}"
                    android:textColor="@color/text_color"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="@+id/icon_area"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/icon_area"
                    app:layout_constraintTop_toTopOf="@+id/icon_area" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <ImageButton
                android:id="@+id/add_button"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="4dp"
                android:adjustViewBounds="true"
                android:background="@drawable/favorite_border"
                android:contentDescription="@string/favorite_button"
                android:gravity="center"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/code3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{model.alpha3Code}"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                app:layout_constraintEnd_toEndOf="@+id/add_button"
                app:layout_constraintStart_toStartOf="@+id/add_button"
                app:layout_constraintTop_toBottomOf="@+id/add_button" />

            <TextView
                android:id="@+id/code2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{model.alpha2Code}"
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                app:layout_constraintEnd_toEndOf="@+id/add_button"
                app:layout_constraintStart_toStartOf="@+id/add_button"
                app:layout_constraintTop_toBottomOf="@+id/add_button" />

            <TextView
                android:id="@+id/is_fav"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:visibility="gone"
                app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
                app:layout_constraintEnd_toEndOf="@+id/add_button"
                app:layout_constraintStart_toStartOf="@+id/add_button"
                app:layout_constraintTop_toBottomOf="@+id/add_button" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</layout>